BUG#33352 : Backup:crash if I use old set of mysql files.

Added capability to throw an error if either of the backup
progress tables are missing.